syntax = "proto3";
package m2.common.v1;

option csharp_namespace = "Metin2Server.Shared.DbContracts.Common";

enum JobGrpc {
  JOB_GRPC_WARRIOR = 0;
  JOB_GRPC_ASSASSIN = 1;
  JOB_GRPC_SURA = 2;
  JOB_GRPC_SHAMAN = 3;
}

enum EmpireGrpc {
  EMPIRE_GRPC_UNKNOWN = 0;
  EMPIRE_GRPC_SHINSOO = 1;
  EMPIRE_GRPC_CHUNJO = 2;
  EMPIRE_GRPC_JINNO = 3;
}

enum RaceGrpc {
  RACE_GRPC_WARRIOR_M = 0;
  RACE_GRPC_ASSASSIN_W = 1;
  RACE_GRPC_SURA_M = 2;
  RACE_GRPC_SHAMAN_W = 3;
  RACE_GRPC_WARRIOR_W = 4;
  RACE_GRPC_ASSASSIN_M = 5;
  RACE_GRPC_SURA_W = 6;
  RACE_GRPC_SHAMAN_M = 7;
}

enum WindowTypeGrpc {
  WINDOW_TYPE_GRPC_RESERVED_WINDOW = 0;
  WINDOW_TYPE_GRPC_INVENTORY = 1;
  WINDOW_TYPE_GRPC_EQUIPMENT = 2;
  WINDOW_TYPE_GRPC_SAFEBOX = 3;
  WINDOW_TYPE_GRPC_MALL = 4;
  WINDOW_TYPE_GRPC_DRAGON_SOUL_INVENTORY = 5;
  WINDOW_TYPE_GRPC_BELT_INVENTORY = 6;
  WINDOW_TYPE_GRPC_AUCTION = 7;
  WINDOW_TYPE_GRPC_GROUND = 8;
}

enum ItemTypeGrpc {
  ITEM_TYPE_GRPC_NONE = 0;
  ITEM_TYPE_GRPC_WEAPON = 1;
  ITEM_TYPE_GRPC_ARMOR = 2;
  ITEM_TYPE_GRPC_USE = 3;
  ITEM_TYPE_GRPC_AUTO_USE = 4;
  ITEM_TYPE_GRPC_MATERIAL = 5;
  ITEM_TYPE_GRPC_SPECIAL = 6;
  ITEM_TYPE_GRPC_TOOL = 7;
  ITEM_TYPE_GRPC_LOTTERY = 8;
  ITEM_TYPE_GRPC_ELK = 9;
  ITEM_TYPE_GRPC_METIN = 10;
  ITEM_TYPE_GRPC_CONTAINER = 11;
  ITEM_TYPE_GRPC_FISH = 12;
  ITEM_TYPE_GRPC_ROD = 13;
  ITEM_TYPE_GRPC_RESOURCE = 14;
  ITEM_TYPE_GRPC_CAMPFIRE = 15;
  ITEM_TYPE_GRPC_UNIQUE = 16;
  ITEM_TYPE_GRPC_SKILL_BOOK = 17;
  ITEM_TYPE_GRPC_QUEST = 18;
  ITEM_TYPE_GRPC_POLYMORPH = 19;
  ITEM_TYPE_GRPC_TREASURE_BOX = 20;
  ITEM_TYPE_GRPC_TREASURE_KEY = 21;
  ITEM_TYPE_GRPC_SKILL_FORGET = 22;
  ITEM_TYPE_GRPC_GIFT_BOX = 23;
  ITEM_TYPE_GRPC_PICK = 24;
  ITEM_TYPE_GRPC_HAIR = 25;
  ITEM_TYPE_GRPC_TOTEM = 26;
  ITEM_TYPE_GRPC_BLEND = 27;
  ITEM_TYPE_GRPC_COSTUME = 28;
  ITEM_TYPE_GRPC_DS = 29;
  ITEM_TYPE_GRPC_SPECIAL_DS = 30;
  ITEM_TYPE_GRPC_EXTRACT = 31;
  ITEM_TYPE_GRPC_SECONDARY_COIN = 32;
  ITEM_TYPE_GRPC_RING = 33;
  ITEM_TYPE_GRPC_BELT = 34;
}

enum ItemSubTypeGrpc {
  ITEM_SUB_TYPE_GRPC_WEAPON_SWORD = 0;
  ITEM_SUB_TYPE_GRPC_WEAPON_DAGGER = 1;
  ITEM_SUB_TYPE_GRPC_WEAPON_BOW = 2;
  ITEM_SUB_TYPE_GRPC_WEAPON_TWO_HANDED = 3;
  ITEM_SUB_TYPE_GRPC_WEAPON_BELL = 4;
  ITEM_SUB_TYPE_GRPC_WEAPON_FAN = 5;
  ITEM_SUB_TYPE_GRPC_WEAPON_ARROW = 6;
  ITEM_SUB_TYPE_GRPC_WEAPON_MOUNT_SPEAR = 7;
  ITEM_SUB_TYPE_GRPC_ARMOR_BODY = 8;
  ITEM_SUB_TYPE_GRPC_ARMOR_HEAD = 9;
  ITEM_SUB_TYPE_GRPC_ARMOR_SHIELD = 10;
  ITEM_SUB_TYPE_GRPC_ARMOR_WRIST = 11;
  ITEM_SUB_TYPE_GRPC_ARMOR_FOOTS = 12;
  ITEM_SUB_TYPE_GRPC_ARMOR_NECK = 13;
  ITEM_SUB_TYPE_GRPC_ARMOR_EAR = 14;
  ITEM_SUB_TYPE_GRPC_COSTUME_BODY = 15;
  ITEM_SUB_TYPE_GRPC_COSTUME_HAIR = 16;
  ITEM_SUB_TYPE_GRPC_METIN_NORMAL = 17;
  ITEM_SUB_TYPE_GRPC_METIN_GOLD = 18;
  ITEM_SUB_TYPE_GRPC_FISH_ALIVE = 19;
  ITEM_SUB_TYPE_GRPC_FISH_DEAD = 20;
  ITEM_SUB_TYPE_GRPC_RESOURCE_FISH_BONE = 21;
  ITEM_SUB_TYPE_GRPC_RESOURCE_WATER_STONE_PIECE = 22;
  ITEM_SUB_TYPE_GRPC_RESOURCE_WATER_STONE = 23;
  ITEM_SUB_TYPE_GRPC_RESOURCE_BLOOD_PEARL = 24;
  ITEM_SUB_TYPE_GRPC_RESOURCE_BLUE_PEARL = 25;
  ITEM_SUB_TYPE_GRPC_RESOURCE_WHITE_PEARL = 26;
  ITEM_SUB_TYPE_GRPC_RESOURCE_BUCKET = 27;
  ITEM_SUB_TYPE_GRPC_RESOURCE_CRYSTAL = 28;
  ITEM_SUB_TYPE_GRPC_RESOURCE_GEM = 29;
  ITEM_SUB_TYPE_GRPC_RESOURCE_STONE = 30;
  ITEM_SUB_TYPE_GRPC_RESOURCE_METIN = 31;
  ITEM_SUB_TYPE_GRPC_RESOURCE_ORE = 32;
  ITEM_SUB_TYPE_GRPC_UNIQUE_NONE = 33;
  ITEM_SUB_TYPE_GRPC_UNIQUE_BOOK = 34;
  ITEM_SUB_TYPE_GRPC_UNIQUE_SPECIAL_RIDE = 35;
  ITEM_SUB_TYPE_GRPC_UNIQUE_SPECIAL_MOUNT_RIDE = 36;
  ITEM_SUB_TYPE_GRPC_USE_POTION = 37;
  ITEM_SUB_TYPE_GRPC_USE_TALISMAN = 38;
  ITEM_SUB_TYPE_GRPC_USE_TUNING = 39;
  ITEM_SUB_TYPE_GRPC_USE_MOVE = 40;
  ITEM_SUB_TYPE_GRPC_USE_TREASURE_BOX = 41;
  ITEM_SUB_TYPE_GRPC_USE_MONEYBAG = 42;
  ITEM_SUB_TYPE_GRPC_USE_BAIT = 43;
  ITEM_SUB_TYPE_GRPC_USE_ABILITY_UP = 44;
  ITEM_SUB_TYPE_GRPC_USE_AFFECT = 45;
  ITEM_SUB_TYPE_GRPC_USE_CREATE_STONE = 46;
  ITEM_SUB_TYPE_GRPC_USE_SPECIAL = 47;
  ITEM_SUB_TYPE_GRPC_USE_POTION_NO_DELAY = 48;
  ITEM_SUB_TYPE_GRPC_USE_CLEAR = 49;
  ITEM_SUB_TYPE_GRPC_USE_INVISIBILITY = 50;
  ITEM_SUB_TYPE_GRPC_USE_DETACHMENT = 51;
  ITEM_SUB_TYPE_GRPC_USE_BUCKET = 52;
  ITEM_SUB_TYPE_GRPC_USE_POTION_CONTINUE = 53;
  ITEM_SUB_TYPE_GRPC_USE_CLEAN_SOCKET = 54;
  ITEM_SUB_TYPE_GRPC_USE_CHANGE_ATTRIBUTE = 55;
  ITEM_SUB_TYPE_GRPC_USE_ADD_ATTRIBUTE = 56;
  ITEM_SUB_TYPE_GRPC_USE_ADD_ACCESSORY_SOCKET = 57;
  ITEM_SUB_TYPE_GRPC_USE_PUT_INTO_ACCESSORY_SOCKET = 58;
  ITEM_SUB_TYPE_GRPC_USE_ADD_ATTRIBUTE2 = 59;
  ITEM_SUB_TYPE_GRPC_USE_RECIPE = 60;
  ITEM_SUB_TYPE_GRPC_USE_CHANGE_ATTRIBUTE2 = 61;
  ITEM_SUB_TYPE_GRPC_USE_BIND = 62;
  ITEM_SUB_TYPE_GRPC_USE_UNBIND = 63;
  ITEM_SUB_TYPE_GRPC_USE_TIME_CHARGE_PER = 64;
  ITEM_SUB_TYPE_GRPC_USE_TIME_CHARGE_FIX = 65;
  ITEM_SUB_TYPE_GRPC_USE_PUT_INTO_BELT_SOCKET = 66;
  ITEM_SUB_TYPE_GRPC_USE_PUT_INTO_RING_SOCKET = 67;
  ITEM_SUB_TYPE_GRPC_AUTO_USE_POTION = 68;
  ITEM_SUB_TYPE_GRPC_AUTO_USE_ABILITY_UP = 69;
  ITEM_SUB_TYPE_GRPC_AUTO_USE_BOMB = 70;
  ITEM_SUB_TYPE_GRPC_AUTO_USE_GOLD = 71;
  ITEM_SUB_TYPE_GRPC_AUTO_USE_MONEYBAG = 72;
  ITEM_SUB_TYPE_GRPC_AUTO_USE_TREASURE_BOX = 73;
  ITEM_SUB_TYPE_GRPC_MATERIAL_LEATHER = 74;
  ITEM_SUB_TYPE_GRPC_MATERIAL_BLOOD = 75;
  ITEM_SUB_TYPE_GRPC_MATERIAL_ROOT = 76;
  ITEM_SUB_TYPE_GRPC_MATERIAL_NEEDLE = 77;
  ITEM_SUB_TYPE_GRPC_MATERIAL_JEWEL = 78;
  ITEM_SUB_TYPE_GRPC_MATERIAL_DS_REFINE_NORMAL = 79;
  ITEM_SUB_TYPE_GRPC_MATERIAL_DS_REFINE_BLESSED = 80;
  ITEM_SUB_TYPE_GRPC_MATERIAL_DS_REFINE_HOLLY = 81;
  ITEM_SUB_TYPE_GRPC_SPECIAL_MAP = 82;
  ITEM_SUB_TYPE_GRPC_SPECIAL_KEY = 83;
  ITEM_SUB_TYPE_GRPC_SPECIAL_DOC = 84;
  ITEM_SUB_TYPE_GRPC_SPECIAL_SPIRIT = 85;
  ITEM_SUB_TYPE_GRPC_TOOL_FISHING_ROD = 86;
  ITEM_SUB_TYPE_GRPC_LOTTERY_TICKET = 87;
  ITEM_SUB_TYPE_GRPC_LOTTERY_INSTANT = 88;
  ITEM_SUB_TYPE_GRPC_DS_SLOT1 = 89;
  ITEM_SUB_TYPE_GRPC_DS_SLOT2 = 90;
  ITEM_SUB_TYPE_GRPC_DS_SLOT3 = 91;
  ITEM_SUB_TYPE_GRPC_DS_SLOT4 = 92;
  ITEM_SUB_TYPE_GRPC_DS_SLOT5 = 93;
  ITEM_SUB_TYPE_GRPC_DS_SLOT6 = 94;
  ITEM_SUB_TYPE_GRPC_EXTRACT_DRAGON_SOUL = 95;
  ITEM_SUB_TYPE_GRPC_EXTRACT_DRAGON_HEART = 96;
}

enum ItemAttributeTypeGrpc {
  ITEM_ATTRIBUTE_TYPE_GRPC_NONE = 0;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAX_HP = 1;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAX_SP = 2;
  ITEM_ATTRIBUTE_TYPE_GRPC_CON = 3;
  ITEM_ATTRIBUTE_TYPE_GRPC_INT = 4;
  ITEM_ATTRIBUTE_TYPE_GRPC_STR = 5;
  ITEM_ATTRIBUTE_TYPE_GRPC_DEX = 6;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_SPEED = 7;
  ITEM_ATTRIBUTE_TYPE_GRPC_MOV_SPEED = 8;
  ITEM_ATTRIBUTE_TYPE_GRPC_CAST_SPEED = 9;
  ITEM_ATTRIBUTE_TYPE_GRPC_HP_REGEN = 10;
  ITEM_ATTRIBUTE_TYPE_GRPC_SP_REGEN = 11;
  ITEM_ATTRIBUTE_TYPE_GRPC_POISON_PCT = 12;
  ITEM_ATTRIBUTE_TYPE_GRPC_STUN_PCT = 13;
  ITEM_ATTRIBUTE_TYPE_GRPC_SLOW_PCT = 14;
  ITEM_ATTRIBUTE_TYPE_GRPC_CRITICAL_PCT = 15;
  ITEM_ATTRIBUTE_TYPE_GRPC_PENETRATE_PCT = 16;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_HUMAN = 17;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_ANIMAL = 18;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_ORC = 19;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_MILGYO = 20;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_UNDEAD = 21;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_DEVIL = 22;
  ITEM_ATTRIBUTE_TYPE_GRPC_STEAL_HP = 23;
  ITEM_ATTRIBUTE_TYPE_GRPC_STEAL_SP = 24;
  ITEM_ATTRIBUTE_TYPE_GRPC_MANA_BURN_PCT = 25;
  ITEM_ATTRIBUTE_TYPE_GRPC_DAMAGE_SP_RECOVER = 26;
  ITEM_ATTRIBUTE_TYPE_GRPC_BLOCK = 27;
  ITEM_ATTRIBUTE_TYPE_GRPC_DODGE = 28;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_SWORD = 29;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_TWO_HAND = 30;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_DAGGER = 31;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_BELL = 32;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_FAN = 33;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_BOW = 34;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_FIRE = 35;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_ELEC = 36;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_MAGIC = 37;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_WIND = 38;
  ITEM_ATTRIBUTE_TYPE_GRPC_REFLECT_MELEE = 39;
  ITEM_ATTRIBUTE_TYPE_GRPC_REFLECT_CURSE = 40;
  ITEM_ATTRIBUTE_TYPE_GRPC_POISON_REDUCE = 41;
  ITEM_ATTRIBUTE_TYPE_GRPC_KILL_SP_RECOVER = 42;
  ITEM_ATTRIBUTE_TYPE_GRPC_EXP_DOUBLE_BONUS = 43;
  ITEM_ATTRIBUTE_TYPE_GRPC_GOLD_DOUBLE_BONUS = 44;
  ITEM_ATTRIBUTE_TYPE_GRPC_ITEM_DROP_BONUS = 45;
  ITEM_ATTRIBUTE_TYPE_GRPC_POTION_BONUS = 46;
  ITEM_ATTRIBUTE_TYPE_GRPC_KILL_HP_RECOVER = 47;
  ITEM_ATTRIBUTE_TYPE_GRPC_IMMUNE_STUN = 48;
  ITEM_ATTRIBUTE_TYPE_GRPC_IMMUNE_SLOW = 49;
  ITEM_ATTRIBUTE_TYPE_GRPC_IMMUNE_FALL = 50;
  ITEM_ATTRIBUTE_TYPE_GRPC_SKILL = 51;
  ITEM_ATTRIBUTE_TYPE_GRPC_BOW_DISTANCE = 52;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_GRADE_BONUS = 53;
  ITEM_ATTRIBUTE_TYPE_GRPC_DEF_GRADE_BONUS = 54;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAGIC_ATT_GRADE = 55;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAGIC_DEF_GRADE = 56;
  ITEM_ATTRIBUTE_TYPE_GRPC_CURSE_PCT = 57;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAX_STAMINA = 58;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_WARRIOR = 59;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_ASSASSIN = 60;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_SURA = 61;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_SHAMAN = 62;
  ITEM_ATTRIBUTE_TYPE_GRPC_ATT_BONUS_MONSTER = 63;
  ITEM_ATTRIBUTE_TYPE_GRPC_MALL_ATT_BONUS = 64;
  ITEM_ATTRIBUTE_TYPE_GRPC_MALL_DEF_BONUS = 65;
  ITEM_ATTRIBUTE_TYPE_GRPC_MALL_EXP_BONUS = 66;
  ITEM_ATTRIBUTE_TYPE_GRPC_MALL_ITEM_BONUS = 67;
  ITEM_ATTRIBUTE_TYPE_GRPC_MALL_GOLD_BONUS = 68;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAX_HP_PCT = 69;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAX_SP_PCT = 70;
  ITEM_ATTRIBUTE_TYPE_GRPC_SKILL_DAMAGE_BONUS = 71;
  ITEM_ATTRIBUTE_TYPE_GRPC_NORMAL_HIT_DAMAGE_BONUS = 72;
  ITEM_ATTRIBUTE_TYPE_GRPC_SKILL_DEFEND_BONUS = 73;
  ITEM_ATTRIBUTE_TYPE_GRPC_NORMAL_HIT_DEFEND_BONUS = 74;
  ITEM_ATTRIBUTE_TYPE_GRPC_PC_BANG_EXP_BONUS = 75;
  ITEM_ATTRIBUTE_TYPE_GRPC_PC_BANG_DROP_BONUS = 76;
  ITEM_ATTRIBUTE_TYPE_GRPC_EXTRACT_HP_PCT = 77;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_WARRIOR = 78;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_ASSASSIN = 79;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_SURA = 80;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_SHAMAN = 81;
  ITEM_ATTRIBUTE_TYPE_GRPC_ENERGY = 82;
  ITEM_ATTRIBUTE_TYPE_GRPC_DEF_GRADE = 83;
  ITEM_ATTRIBUTE_TYPE_GRPC_COSTUME_ATTR_BONUS = 84;
  ITEM_ATTRIBUTE_TYPE_GRPC_MAGIC_ATT_BONUS_PER = 85;
  ITEM_ATTRIBUTE_TYPE_GRPC_MELEE_MAGIC_ATT_BONUS_PER = 86;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_ICE = 87;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_EARTH = 88;
  ITEM_ATTRIBUTE_TYPE_GRPC_RESIST_DARK = 89;
  ITEM_ATTRIBUTE_TYPE_GRPC_ANTI_CRITICAL_PCT = 90;
  ITEM_ATTRIBUTE_TYPE_GRPC_ANTI_PENETRATE_PCT = 91;
}

enum ItemLimitTypeGrpc {
  ITEM_LIMIT_TYPE_GRPC_NONE = 0;
  ITEM_LIMIT_TYPE_GRPC_LEVEL = 1;
  ITEM_LIMIT_TYPE_GRPC_STR = 2;
  ITEM_LIMIT_TYPE_GRPC_DEX = 3;
  ITEM_LIMIT_TYPE_GRPC_INT = 4;
  ITEM_LIMIT_TYPE_GRPC_CON = 5;
  ITEM_LIMIT_TYPE_GRPC_PC_BANG = 6;
  ITEM_LIMIT_TYPE_GRPC_REAL_TIME = 7;
  ITEM_LIMIT_TYPE_GRPC_REAL_TIME_START_FIRST_USE = 8;
  ITEM_LIMIT_TYPE_GRPC_TIMER_BASED_ON_WEAR = 9;
}
